# MYScrcpy

./: .gitignore  README.md  README_EN.md  pyproject.toml  u2_server.py
files/old_version/: README.md  README_EN.md
src/mysc/: __init__.py  babel.cfg  run.py
src/mysc/core/: device.py
src/mysc/gui/: __init__.py
src/mysc/gui/k/: __init__.py  app.py  defs.py
src/mysc/gui/k/components/base/: __init__.py  my_audio.py  my_control_layer.py  my_dialog.py  my_list.py  my_navigation.py  my_page_parse.py  my_proxy.py  my_radial_menu.py  my_screen.py  my_skill_adjuster.py  my_snack_bar.py
src/mysc/gui/k/components/controller/: __init__.py  keyboard.py  mouse.py
src/mysc/gui/k/components/screens/: connect_modes.py  connections.py  devices.py  vac.py
src/mysc/gui/utils/: __init__.py  audio_player.py
src/mysc/locales/: myscrcpy.pot
src/mysc/locales/en_US/LC_MESSAGES/: mysc.mo  mysc.po
src/mysc/locales/zh_CN/LC_MESSAGES/: mysc.mo  mysc.po  myscrcpy.mo  myscrcpy.po
src/mysc/mcp_service/: __init__.py  device.py  lifecycle.py  server.py
src/mysc/utils/: i18n_compile.py  vector.py
