[project]
name = "mysc"
version = "3.3.0"
description = "A Scrcpy client implemented in Python. Use Kivy/KivyMD, with Video, Audio, also Control."
readme = "README.md"
authors = [
    { name = "Me2sY", email = "me2sy@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "babel>=2.17.0",
    "ipython>=9.9.0",
    "kivy>=2.3.1",
    "kivymd",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "olefile>=0.47",
    "pyaudio>=0.2.14",
    "pycairo>=1.29.0",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture"
]

[project.scripts]
mysc = "mysc.run"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.sources]
kivymd = { path = "KivyMD-master.zip" }

[project.urls]
Homepage = "https://github.com/me2sy/MYScrcpy"
Issues = "https://github.com/me2sy/MYScrcpy/issues"
