[project]
name = "mysc"
version = "3.3.01"
description = "A Scrcpy client implemented in Python. Use Kivy/KivyMD, with Video, Audio, also Control."
readme = "README.md"
authors = [
    { name = "Me2sY", email = "me2sy@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "adbutils>=2.12.0",
    "av>=16.1.0",
    "kivy>=2.3.1",
    "loguru>=0.7.3",
    "numpy>=2.4.2",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture"
]

[project.scripts]
mysc = "mysc.run:run"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
