[project]
name = "mysc"
version = "3.3.01"
description = "A Scrcpy client implemented in Python. Use Kivy/KivyMD, with Video, Audio, also Control."
readme = "README.md"
authors = [
    { name = "Me2sY", email = "me2sy@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "adbutils>=2.12.0",
    "av>=16.1.0",
    "fastmcp>=3.2.4",
    "kivy>=2.3.1",
    "kivymd>=1.2.0",
    "loguru>=0.7.3",
    "mcp>=1.27.0",
    "numpy>=2.4.2",
    "pyaudio>=0.2.14",
    "pynput>=1.8.1",
    "pyperclip>=1.11.0",
    "u2-webview>=0.1.2",
    "uiautodev>=0.14.0",
    "uiautomator2>=3.5.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture"
]

[project.scripts]
u2mysc = "mysc.run:run"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
kivymd = { url = "https://github.com/kivymd/KivyMD/archive/master.zip" }

[dependency-groups]
dev = []
